do not repeat search query on search pages
now that the blog card search bar is always visible (if searching is
enabled), the current search query is now always visible within it,
meaning there is no need to repeat it before the posts

this matches how peepr relies on the search input value to indicate that
the current set of posts are search results

the heading for when results are found may be reimplemented after
{SearchResultCount} is fixed

--- a/Theme.html
+++ b/Theme.html
@@ -91,8 +91,8 @@
                     {text:Widget Code}
                 </section>{/block:IfWidgetCode}
             </aside>
-            <main {block:IfEnableEndlessScrolling}{block:Pagination}role="feed"{/block:Pagination}{/block:IfEnableEndlessScrolling}>{block:SearchPage}
-                <h3>{lang:SearchResultCount results for SearchQuery}{block:NoSearchResults}{lang:No search results for SearchQuery}{/block:NoSearchResults}</h3>{/block:SearchPage}{block:TagPage}
+            <main {block:IfEnableEndlessScrolling}{block:Pagination}role="feed"{/block:Pagination}{/block:IfEnableEndlessScrolling}>{block:SearchPage}{block:NoSearchResults}
+                <h3>{lang:No results found}</h3>{/block:NoSearchResults}{/block:SearchPage}{block:TagPage}
                 <h3>#{Tag}</h3>{/block:TagPage}{block:DayPage}
                 <h3>{lang:Viewing everything posted on Month DayOfMonth Year}</h3>{/block:DayPage}{block:NoPosts}
                 <h3>{lang:This Tumblr hasnt made any posts}</h3>{/block:NoPosts}{block:Posts inlineMediaWidth="540"}
