--- a/Theme.html
+++ b/Theme.html
@@ -25,7 +25,7 @@
         <meta name="theme-color" content="{BackgroundColor}">
         <link rel="alternate" type="application/rss+xml" href="{RSS}">
         <link rel="stylesheet" href="https://static.tumblr.com/2wliono/Vf7pfceur/normalize.css">
-        <link rel="stylesheet" href="https://static.tumblr.com/2wliono/ja7r7hups/vision_core.css">
+        <link rel="stylesheet" href="https://static.tumblr.com/2wliono/WSir8iw9i/vision_core.css">
         <link rel="stylesheet" href="{select:Posts palette}">
         <link rel="stylesheet" media="(max-width: 540px)" href="https://static.tumblr.com/2wliono/0Dkr3uqzi/vision_mobile.css">
         <link rel="stylesheet" href="https://assets.tumblr.com/fonts/favorit/stylesheet.css?v=1">
@@ -326,11 +326,11 @@
                         </footer>{/block:Date}
                     </article>{/block:LikedPosts}
                 </section>{/block:HasLikedPosts}{/block:IfShowRecentlyLiked}
+                <section id="credit">
+                    <a href="https://www.tumblr.com/" {Target}>{lang:Powered by Tumblr}</a>
+                    <a href="https://www.tumblr.com/theme/40627" {Target}>{lang:Install this theme}</a>
+                </a>
             </aside>
         </div>
-        <a id="credit" href="https://www.tumblr.com/theme/40627" {Target}>
-            <span>{lang:Install this theme}</span>
-            <img src="https://static.tumblr.com/2wliono/2E5oic9yz/tiny.png" aria-hidden="true">
-        </a>
     </body>
 </html>
